--- a/src/DSTest.Api/ClientApp/src/app/components/home/home.component.html
+++ b/src/DSTest.Api/ClientApp/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<div class="container">
+  <mat-list>
+    <button color="accent" class="button-offset" mat-raised-button>
+      <mat-icon class="icon-size">table_chart</mat-icon>
+      <span class="text-offset">Table</span>
+    </button>
+    <button color="accent" [routerLink]="'/Upload'" mat-raised-button>
+      <mat-icon class="icon-size">insert_drive_file</mat-icon>
+      <span class="text-offset">Upload data</span>
+    </button>
+  </mat-list>
+</div>
