refactoring and simple test

--- a/src/DSTest.Api/ClientApp/src/app/components/home/home.component.html
+++ b/src/DSTest.Api/ClientApp/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-list>
-    <button color="accent" class="button-offset" mat-raised-button>
+    <button color="accent" [routerLink]="'/Table'" class="button-offset" mat-raised-button>
       <mat-icon class="icon-size">table_chart</mat-icon>
       <span class="text-offset">Table</span>
     </button>
