--- a/src/DSTest.Api/ClientApp/src/app/components/table/table.component.html
+++ b/src/DSTest.Api/ClientApp/src/app/components/table/table.component.html
@@ -1,7 +1,28 @@
+<div class="select">
+  <mat-form-field class="margin-right">
+    <mat-label>Год</mat-label>
+    <mat-select (selectionChange)="onYearChange($event)" [value]="0">
+      <mat-option value="0">Все года</mat-option>
+      <mat-option *ngFor="let year of years" [value]="year">
+        {{ year }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Месяц</mat-label>
+    <mat-select (selectionChange)="onMonthChange($event)" [value]="0">
+      <mat-option value="0">Все месяцы</mat-option>
+      <mat-option *ngFor="let month of months" [value]="month.number">
+        {{ month.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="index">
     <th mat-header-cell *matHeaderCellDef>П/п</th>
-    <td mat-cell *matCellDef="let element; let i = index">{{ i }}</td>
+    <td mat-cell *matCellDef="let element; let i = index">{{ currentPage * currentRecordsPerPage + i + 1 }}</td>
   </ng-container>
 
   <ng-container matColumnDef="date">
@@ -71,6 +92,7 @@
   [length]="recordsCount"
   [pageSize]="currentRecordsPerPage"
   [pageSizeOptions]="[5, 15, 25, 100]"
+  [pageIndex]="currentPage"
   aria-label="Select page"
   (page)="handlePageEvent($event)"
 >
